# ygame

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile_nginx  Dockerfile_server  Makefile.toml  Readme.md  docker-compose.yaml
client/: Cargo.toml
client/src/: ep.rs  err.rs  lib.rs
client/src/app/: app.rs  state.rs
client/src/app/game/: mod.rs
client/src/app/lobby/: form.rs  mod.rs
client/src/app/login/: form.rs  mod.rs
client/src/conn/: conn.rs  loader.rs  socket.rs
client/src/conn/handler/: handshake.rs  mod.rs
client/src/conn/handler/v1/: login.rs  mod.rs  running.rs
client/src/utils/: browser.rs  console.rs  dom.rs  history.rs  mod.rs  string.rs  time.rs
game/: Cargo.toml
game/src/: lib.rs
misc/: Cargo.client.toml  Cargo.server.toml  ygame.nginx.docker.conf  ygame.nginx.template.conf
protocol/: Cargo.toml
protocol/src/: error.rs  handshake.rs  lib.rs  v1.rs
server/: Cargo.toml
server/src/: actor_msg.rs  error.rs  lobby.rs  log.rs  main.rs  user.rs
server/src/client/: mod.rs  v1.rs
server/src/game/: mod.rs  name.rs
server/static/: client.js  index.html
server/static/css/: ygame.css
