[package]
name = "ygame-client"
version = "0.1.0"
edition = "2018"
authors = ["Sam"]
description = """
Ybo first board game, client side
"""
readme = "../README.md"
keywords = ["game", "web", "wasm", "client"]
license = "GPL-3"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ygame-game = { version = "0.1.0", path = "../game" }
ygame-protocol = { version = "0.1.0", path = "../protocol" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.77"
js-sys = "0.3.54"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
rmp-serde = "0.15.5"
backtrace = "0.3.61"


[dependencies.web-sys]
version = "0.3.54"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "Url",
  "Window",
  "Document",
  "Location",
  "Storage",
  "HtmlFormElement",
  "HtmlInputElement",
  "Element", 
  "HtmlCollection",
  "Performance",
  "History",
  "PopStateEvent"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.27"


