[package]
name = "ygame-game"
version = "0.1.0"
edition = "2018"
authors = ["Sam"]
description = """
Ybo first board game, game logic rules
"""
readme = "../README.md"
keywords = ["game", "web", "lib"]
license = "GPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
