[package]
name = "ygame"
version = "0.1.0"
edition = "2018"
authors = ["Sam"]
description = """
Ybo first board game, server side
"""
readme = "../README.md"
keywords = ["game", "web", "server"]
license = "GPL-3"
publish = false


[dependencies]
ygame-game = { version = "0.1.0", path = "../game" }
ygame-protocol = { version = "0.1.0", path = "../protocol" }

actix = "0.10.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
clap = "2.33.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "0.15.5"
rand = "0.8.4"

